--- a/PalCine/Base.lproj/Main.storyboard
+++ b/PalCine/Base.lproj/Main.storyboard
@@ -21,27 +21,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="Pp7-7Z-JBT">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lauchscreenBg" translatesAutoresizingMaskIntoConstraints="NO" id="Pp7-7Z-JBT">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="ao1-Ha-Ezx">
-                                <rect key="frame" x="169" y="463" width="37" height="37"/>
+                                <rect key="frame" x="169" y="483" width="37" height="37"/>
                             </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h5l-hb-sFd">
-                                <rect key="frame" x="16" y="526" width="343" height="21"/>
+                                <rect key="frame" x="16" y="546" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconWhite" translatesAutoresizingMaskIntoConstraints="NO" id="8La-bf-9ef">
+                                <rect key="frame" x="114" y="256.5" width="147" height="154"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="154" id="9s9-pj-YDV"/>
+                                    <constraint firstAttribute="width" constant="147" id="cjZ-45-VwZ"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Pp7-7Z-JBT" firstAttribute="top" secondItem="XeU-8W-aIc" secondAttribute="top" id="604-oM-RdB"/>
+                            <constraint firstItem="8La-bf-9ef" firstAttribute="centerX" secondItem="XeU-8W-aIc" secondAttribute="centerX" id="JWz-5T-kGq"/>
                             <constraint firstItem="h5l-hb-sFd" firstAttribute="top" secondItem="ao1-Ha-Ezx" secondAttribute="bottom" constant="26" id="KDi-N8-otQ"/>
                             <constraint firstAttribute="bottom" secondItem="Pp7-7Z-JBT" secondAttribute="bottom" id="Mrt-qG-jPU"/>
-                            <constraint firstItem="YvV-Ec-6A8" firstAttribute="top" secondItem="h5l-hb-sFd" secondAttribute="bottom" constant="120" id="OH9-XT-07I"/>
+                            <constraint firstItem="YvV-Ec-6A8" firstAttribute="top" secondItem="h5l-hb-sFd" secondAttribute="bottom" constant="100" id="OH9-XT-07I"/>
                             <constraint firstItem="h5l-hb-sFd" firstAttribute="leading" secondItem="XeU-8W-aIc" secondAttribute="leadingMargin" id="PMw-LI-DLm"/>
                             <constraint firstItem="ao1-Ha-Ezx" firstAttribute="centerX" secondItem="XeU-8W-aIc" secondAttribute="centerX" id="PQ4-QX-YGJ"/>
+                            <constraint firstItem="8La-bf-9ef" firstAttribute="centerY" secondItem="XeU-8W-aIc" secondAttribute="centerY" id="PYf-vY-7Ky"/>
                             <constraint firstItem="Pp7-7Z-JBT" firstAttribute="leading" secondItem="XeU-8W-aIc" secondAttribute="leading" id="STd-v4-jA5"/>
                             <constraint firstAttribute="trailing" secondItem="Pp7-7Z-JBT" secondAttribute="trailing" id="t7b-0v-sbM"/>
                             <constraint firstItem="h5l-hb-sFd" firstAttribute="trailing" secondItem="XeU-8W-aIc" secondAttribute="trailingMargin" id="ydO-7n-7v0"/>
@@ -57,7 +66,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xYI-71-50x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-553" y="-1152"/>
+            <point key="canvasLocation" x="-554.39999999999998" y="-1152.7736131934034"/>
         </scene>
         <!--MovieOS-->
         <scene sceneID="uOm-td-v4s">
@@ -965,6 +974,8 @@
     <resources>
         <image name="heartOff" width="32" height="29"/>
         <image name="heartOn" width="32" height="29"/>
+        <image name="iconWhite" width="246" height="258"/>
+        <image name="lauchscreenBg" width="750" height="1334"/>
         <image name="launchScreen" width="750" height="1334"/>
         <image name="movieIcon" width="25" height="25"/>
         <image name="placeholderCastImage" width="270" height="348"/>
